file structure for models + material

--- a/src/pages/bus.html
+++ b/src/pages/bus.html
@@ -235,7 +235,7 @@
                 <div class="auto_park_slider-overflow">
                     <div class="auto_park_slider-wrapper">
                         <div class="gallery_item">
-                            <a class="gallery_item_link" href="../index.html">
+                            <a class="gallery_item_link" href="../pages/amarok.html">
                                 <img class="gallery_item-img" src="../img/layout/slider/slide_amarok2.png" alt="slide">
                             </a>
                         </div>
@@ -255,7 +255,7 @@
                             </a>
                         </div>
                         <div class="gallery_item">
-                            <a class="gallery_item_link" href="../index.html">
+                            <a class="gallery_item_link" href="../pages/amarok.html">
                                 <img class="gallery_item-img" src="../img/layout/slider/slide_amarok2.png" alt="slide">
                             </a>
                         </div>
@@ -275,7 +275,7 @@
                             </a>
                         </div>
                         <div class="gallery_item">
-                            <a class="gallery_item_link" href="../index.html">
+                            <a class="gallery_item_link" href="../pages/amarok.html">
                                 <img class="gallery_item-img" src="../img/layout/slider/slide_amarok2.png" alt="slide">
                             </a>
                         </div>
