--- a/src/pages/ford.html
+++ b/src/pages/ford.html
@@ -239,13 +239,13 @@
                                 <img class="gallery_item-img" src="../img/layout/slider/slide_amarok2.png" alt="slide">
                             </a>
                         </div>
-                        <div class="gallery_item">
-                            <a class="gallery_item_link" href="../pages/solaris.html">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_solara_1.png" alt="slide">
-                            </a>
-                        </div>
                         <div class="gallery_item active">
                             <a class="gallery_item_link" href="#">
+                                <img class="gallery_item-img" src="../img/layout/slider/slide_solara_1.png" alt="slide">
+                            </a>
+                        </div>
+                        <div class="gallery_item">
+                            <a class="gallery_item_link" href="../pages/solaris_two.html">
                                 <img class="gallery_item-img" src="../img/layout/slider/slide_solara_2.png" alt="slide">
                             </a>
                         </div>
@@ -260,12 +260,12 @@
                             </a>
                         </div>
                         <div class="gallery_item">
-                            <a class="gallery_item_link" href="../pages/solaris.html">
+                            <a class="gallery_item_link" href="#">
                                 <img class="gallery_item-img" src="../img/layout/slider/slide_solara_1.png" alt="slide">
                             </a>
                         </div>
                         <div class="gallery_item">
-                            <a class="gallery_item_link" href="#">
+                            <a class="gallery_item_link" href="../pages/solaris_two.html">
                                 <img class="gallery_item-img" src="../img/layout/slider/slide_solara_2.png" alt="slide">
                             </a>
                         </div>
@@ -280,12 +280,12 @@
                             </a>
                         </div>
                         <div class="gallery_item">
-                            <a class="gallery_item_link" href="../pages/solaris.html">
+                            <a class="gallery_item_link" href="#">
                                 <img class="gallery_item-img" src="../img/layout/slider/slide_solara_1.png" alt="slide">
                             </a>
                         </div>
                         <div class="gallery_item">
-                            <a class="gallery_item_link" href="#">
+                            <a class="gallery_item_link" href="../pages/solaris_two.html">
                                 <img class="gallery_item-img" src="../img/layout/slider/slide_solara_2.png" alt="slide">
                             </a>
                         </div>
