--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
                         <a class="menu_navigation-link" href="#traffic_patrol">дорожный патруль ЦОДД</a>
                         <div class="menu_preview-block">
                             <div class="block-wrapper-video">
-                                <video class="menu_preview-video" src="./img/video/amarok.mp4" autoplay muted loop></video>
+                                <video class="menu_preview-video" src="./img/video/amarok.mp4" autoplay muted loop playsinline></video>
                             </div>
                         </div>
                     </li>
@@ -53,7 +53,7 @@
                         <a class="menu_navigation-link" href="#situation_centre">Мобильный ситуационный центр</a>
                         <div class="menu_preview-block">
                             <div class="block-wrapper-video">
-                                <video class="menu_preview-video" src="./img/video/bus.mp4" autoplay muted loop></video>
+                                <video class="menu_preview-video" src="./img/video/bus.mp4" autoplay muted loop playsinline></video>
                             </div>
                         </div>
                     </li>
@@ -76,7 +76,7 @@
                         <a class="menu_navigation-link" href="#help_desk">Служба помощи</a>
                         <div class="menu_preview-block">
                             <div class="block-wrapper-video">
-                                <video class="menu_preview-video" src="./img/video/ford.mp4" autoplay muted loop></video>
+                                <video class="menu_preview-video" src="./img/video/ford.mp4" autoplay muted loop playsinline></video>
                             </div>
                         </div>
                     </li>
@@ -113,7 +113,7 @@
     <main class="gradient_move">
         <section class="main">
             <div class="main_intro_media">
-                <video class="preview_video" src="./img/video/main_section.mp4" autoplay muted loop></video>
+                <video class="preview_video" src="./img/video/main_section.mp4" autoplay muted loop playsinline></video>
             </div>
             <div class="main_intro_content">
                 <div class="container_main">
@@ -179,7 +179,9 @@
                         <div class="traffic_patrol_slider-wrapper swiper">
                             <div class="traffic_patrol_slider swiper-wrapper">
                                 <a class="garage_model_card swiper-slide" href="./pages/amarok.html">
-                                    <div class="slid_img"></div>
+                                    <div class="slid_img">
+                                        <video class="menu_preview-video" src="./img/video/amarok.mp4" autoplay muted loop playsinline></video>
+                                    </div>
                                     <div class="slid_info">
                                         <div class="slid_info-desc">
                                             <p class="slid_info-title">Дорожный патруль ЦОДД</p>
@@ -198,11 +200,13 @@
                                     </div>
                                 </a>
                                 <a class="garage_model_card swiper-slide" href="./pages/amarok.html">
-                                    <div class="slid_img"></div>
+                                    <div class="slid_img">
+                                        <video class="menu_preview-video" src="./img/video/bus.mp4" autoplay muted loop playsinline></video>
+                                    </div>
                                     <div class="slid_info">
                                         <div class="slid_info-desc">
-                                            <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                            <p class="slid_info-text">Патрульный пикап</p>
+                                            <p class="slid_info-title">Мобильный ситуационный центр</p>
+                                            <p class="slid_info-text">Ситуационный автобус</p>
                                         </div>
                                         <div class="slid_info-link">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -217,10 +221,12 @@
                                     </div>
                                 </a>
                                 <a class="garage_model_card swiper-slide" href="./pages/amarok.html">
-                                    <div class="slid_img"></div>
+                                    <div class="slid_img">
+                                        <video class="menu_preview-video" src="./img/video/ford.mp4" autoplay muted loop playsinline></video>
+                                    </div>
                                     <div class="slid_info">
                                         <div class="slid_info-desc">
-                                            <p class="slid_info-title">Дорожный патруль ЦОДД</p>
+                                            <p class="slid_info-title">Служба помощи ЦОДД</p>
                                             <p class="slid_info-text">Патрульный пикап</p>
                                         </div>
                                         <div class="slid_info-link">
@@ -253,7 +259,9 @@
                         <div class="traffic_patrol_slider-wrapper">
                             <div class="traffic_patrol_slider">
                                 <a class="garage_model_card swiper-slide" href="./pages/amarok.html">
-                                    <div class="slid_img"></div>
+                                    <div class="slid_img">
+                                        <video class="menu_preview-video" src="./img/video/amarok.mp4" autoplay muted loop playsinline></video>
+                                    </div>
                                     <div class="slid_info">
                                         <div class="slid_info-desc">
                                             <p class="slid_info-title">Дорожный патруль ЦОДД</p>
@@ -313,7 +321,9 @@
                     </div>
                     <div class="slider-5">
                         <a class="garage_model_card swiper-slide" href="./pages/amarok.html">
-                            <div class="slid_img"></div>
+                            <div class="slid_img">
+                                <video class="menu_preview-video" src="./img/video/amarok.mp4" autoplay muted loop playsinline></video>
+                            </div>
                             <div class="slid_info">
                                 <div class="slid_info-desc">
                                     <p class="slid_info-title">Дорожный патруль ЦОДД</p>
@@ -638,7 +648,9 @@
                     </div>
                     <div class="slide-5">
                         <a class="garage_model_card swiper-slide" href="./pages/amarok.html">
-                            <div class="slid_img"></div>
+                            <div class="slid_img">
+                                <video class="menu_preview-video" src="./img/video/amarok.mp4" autoplay muted loop playsinline></video>
+                            </div>
                             <div class="slid_info">
                                 <div class="slid_info-desc">
                                     <p class="slid_info-title">Дорожный патруль ЦОДД</p>
@@ -659,11 +671,13 @@
                     </div>
                     <div class="slide-6">
                         <a class="garage_model_card swiper-slide" href="./pages/amarok.html">
-                            <div class="slid_img"></div>
+                            <div class="slid_img">
+                                <video class="menu_preview-video" src="./img/video/bus.mp4" autoplay muted loop playsinline></video>
+                            </div>
                             <div class="slid_info">
                                 <div class="slid_info-desc">
-                                    <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                    <p class="slid_info-text">Патрульный пикап</p>
+                                    <p class="slid_info-title">Мобильный ситуационный центр</p>
+                                    <p class="slid_info-text">Ситуационный автобус</p>
                                 </div>
                                 <div class="slid_info-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -682,7 +696,9 @@
                         <div class="traffic_patrol_slider-wrapper swiper3">
                             <div class="traffic_patrol_slider swiper-wrapper">
                                 <a class="garage_model_card swiper-slide" href="./pages/amarok.html">
-                                    <div class="slid_img"></div>
+                                    <div class="slid_img">
+                                        <video class="menu_preview-video" src="./img/video/amarok.mp4" autoplay muted loop playsinline></video>
+                                    </div>
                                     <div class="slid_info">
                                         <div class="slid_info-desc">
                                             <p class="slid_info-title">Дорожный патруль ЦОДД</p>
@@ -701,7 +717,9 @@
                                     </div>
                                 </a>
                                 <a class="garage_model_card swiper-slide" href="./pages/amarok.html">
-                                    <div class="slid_img"></div>
+                                    <div class="slid_img">
+                                        <video class="menu_preview-video" src="./img/video/bus.mp4" autoplay muted loop playsinline></video>
+                                    </div>
                                     <div class="slid_info">
                                         <div class="slid_info-desc">
                                             <p class="slid_info-title">Дорожный патруль ЦОДД</p>
@@ -720,7 +738,9 @@
                                     </div>
                                 </a>
                                 <a class="garage_model_card swiper-slide" href="./pages/amarok.html">
-                                    <div class="slid_img"></div>
+                                    <div class="slid_img">
+                                        <video class="menu_preview-video" src="./img/video/ford.mp4" autoplay muted loop playsinline></video>
+                                    </div>
                                     <div class="slid_info">
                                         <div class="slid_info-desc">
                                             <p class="slid_info-title">Дорожный патруль ЦОДД</p>
