add tipons + fix tech_spec

--- a/src/pages/amarok.html
+++ b/src/pages/amarok.html
@@ -139,7 +139,7 @@
                                 <img src="../img/layout/icon-arrow.svg" alt="icon-arrow">
                             </a>
                         </div>
-                        <div class="tech_spec__visible hidden">
+                        <div class="tech_spec__visible">
                             <div class="tech_spec__mission">
                                 <p class="tech_spec__text">Задача:</p>
                                 <p class="tech_spec__text-descr">Регулировать движение на сложных участках, помогать водителям при поломке или аварии.</p>
@@ -212,8 +212,9 @@
                         </div>
                     </div>
                     <a class="tech_spec__btn">
-                        <span>Подробнее</span>
-                        <img src="../img/layout/icon-arrow.svg" alt="icon-arrow">
+<!--                        <span>Подробнее</span>-->
+                        <span>Скрыть</span>
+                        <img class="rotate" src="../img/layout/icon-arrow.svg" alt="icon-arrow">
                     </a>
                 </div>
             </div>
