--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@
     <main class="gradient_move">
         <section class="main">
             <div class="main_intro_media">
-                <video class="preview_video" src="./img/video/main_section.mp4" autoplay muted loop playsinline></video>
+                <video class="preview_video" src="./img/video/main_section_new.mp4" autoplay muted loop playsinline></video>
             </div>
             <div class="main_intro_content">
                 <div class="container_main">
