--- a/src/pages/solaris_two.html
+++ b/src/pages/solaris_two.html
@@ -107,10 +107,10 @@
 <header class="header">
     <div class="container">
         <div class="header__wrapper">
-            <div class="header__logo">
+            <a class="header__logo" href="../index.html">
                 <img class="header__logo-img" src="../img/layout/header_logo.svg" alt="logo">
                 <p class="header__logo-text">Гараж ЦОДД</p>
-            </div>
+            </a>
             <div class="header__info">
                 <img class="header__info-img" src="../img/layout/header_img2.png" alt="model_preview">
                 <div class="header__info-descr">
@@ -219,7 +219,7 @@
             </div>
         </div>
     </section>
-    <div class="tech_spec__interior">
+    <div class="tech_spec__interior" id="solaris_green">
         <div class="tech_spec__interior-btn">
             <span class="tech_spec__interior-text">В салон</span>
             <div class="arrow-wrapper">
@@ -241,62 +241,77 @@
                     <div class="auto_park_slider-wrapper">
                         <div class="gallery_item">
                             <a class="gallery_item_link" href="../pages/amarok.html">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_amarok2.png" alt="slide">
+                                <img class="gallery_item-img" src="../img/layout/slider/amarok.png" alt="amarok">
                             </a>
                         </div>
                         <div class="gallery_item">
                             <a class="gallery_item_link" href="../pages/solaris.html">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_solara_1.png" alt="slide">
+                                <img class="gallery_item-img" src="../img/layout/slider/slide_solara_1.png" alt="solaris">
+                            </a>
+                        </div>
+                        <div class="gallery_item">
+                            <a class="gallery_item_link" href="../pages/ford.html">
+                                <img class="gallery_item-img" src="../img/layout/slider/ford.png" alt="ford">
                             </a>
                         </div>
                         <div class="gallery_item active">
                             <a class="gallery_item_link" href="#">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_solara_2.png" alt="slide">
+                                <img class="gallery_item-img" src="../img/layout/slider/solaris_green.png" alt="solaris">
                             </a>
                         </div>
                         <div class="gallery_item">
                             <a class="gallery_item_link" href="../pages/bus.html">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_bus.png" alt="slide">
+                                <img class="gallery_item-img" src="../img/layout/slider/bus.png" alt="bus">
                             </a>
                         </div>
                         <div class="gallery_item">
                             <a class="gallery_item_link" href="../pages/amarok.html">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_amarok2.png" alt="slide">
+                                <img class="gallery_item-img" src="../img/layout/slider/amarok.png" alt="amarok">
                             </a>
                         </div>
                         <div class="gallery_item">
                             <a class="gallery_item_link" href="../pages/solaris.html">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_solara_1.png" alt="slide">
+                                <img class="gallery_item-img" src="../img/layout/slider/slide_solara_1.png" alt="solaris">
+                            </a>
+                        </div>
+                        <div class="gallery_item">
+                            <a class="gallery_item_link" href="../pages/ford.html">
+                                <img class="gallery_item-img" src="../img/layout/slider/ford.png" alt="ford">
                             </a>
                         </div>
                         <div class="gallery_item">
                             <a class="gallery_item_link" href="#">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_solara_2.png" alt="slide">
+                                <img class="gallery_item-img" src="../img/layout/slider/solaris_green.png" alt="solaris">
                             </a>
                         </div>
                         <div class="gallery_item">
                             <a class="gallery_item_link" href="../pages/bus.html">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_bus.png" alt="slide">
+                                <img class="gallery_item-img" src="../img/layout/slider/bus.png" alt="bus">
                             </a>
                         </div>
                         <div class="gallery_item">
                             <a class="gallery_item_link" href="../pages/amarok.html">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_amarok2.png" alt="slide">
+                                <img class="gallery_item-img" src="../img/layout/slider/amarok.png" alt="amarok">
                             </a>
                         </div>
                         <div class="gallery_item">
                             <a class="gallery_item_link" href="../pages/solaris.html">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_solara_1.png" alt="slide">
+                                <img class="gallery_item-img" src="../img/layout/slider/slide_solara_1.png" alt="solaris">
+                            </a>
+                        </div>
+                        <div class="gallery_item">
+                            <a class="gallery_item_link" href="../pages/ford.html">
+                                <img class="gallery_item-img" src="../img/layout/slider/ford.png" alt="ford">
                             </a>
                         </div>
                         <div class="gallery_item">
                             <a class="gallery_item_link" href="#">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_solara_2.png" alt="slide">
+                                <img class="gallery_item-img" src="../img/layout/slider/solaris_green.png" alt="solaris">
                             </a>
                         </div>
                         <div class="gallery_item">
                             <a class="gallery_item_link" href="../pages/bus.html">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_bus.png" alt="slide">
+                                <img class="gallery_item-img" src="../img/layout/slider/bus.png" alt="bus">
                             </a>
                         </div>
                     </div>
