logo added + ford+

--- a/src/pages/solaris_two.html
+++ b/src/pages/solaris_two.html
@@ -95,8 +95,13 @@
 <div class="progress-bar">
     <div class="progress-bar-container">
         <div class="image">
-            <img src="/src/img/layout/loader/2.svg" alt="цодд">
-            <p class="image-text">ЦОДД</p>
+            <!--            <img class="animated" src="/src/img/layout/loader/2.svg" alt="цодд">-->
+            <!--            <p class="image-text">ЦОДД</p>-->
+            <img class="no_animated" src="/src/img/layout/loader/logo.gif" alt="цодд">
+            <!--            <video autoplay muted loop playsinline preload>-->
+            <!--                <source src="/src/img/layout/loader/logo.mp4" type="video/mp4">-->
+            <!--                <source src="/src/img/layout/loader/logo.webm" type="video/webm">-->
+            <!--            </video>-->
         </div>
         <span id="progress-label">0%</span>
         <progress id="progress-bar" value="0" max="100"></progress>
