--- a/src/pages/vectary.html
+++ b/src/pages/vectary.html
@@ -44,7 +44,7 @@
                             <div class="tech_spec__visible hidden">
                                 <div class="tech_spec__mission">
                                     <p class="tech_spec__text">Задача:</p>
-                                    <p class="tech_spec__text-descr">Регулировать движение на сложных участках, помогать водителям при поломке или аварии.</p>
+                                    <p class="tech_spec__text-descr">Регулировать движение на&nbsp;сложных участках, помогать водителям при поломке или аварии.</p>
                                 </div>
                                 <div class="tech_spec__outfit">
                                     <p class="tech_spec__text">Экипировка:</p>
@@ -145,40 +145,29 @@
                     <div class="auto_park_slider-overflow">
                         <div class="auto_park_slider-wrapper">
                             <div class="gallery_item active">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_amarok2.png" alt="slide">
+                                <a class="gallery_item_link" href="#">
+                                    <img class="gallery_item-img" src="../img/layout/slider/amarok.png" alt="amarok">
+                                </a>
                             </div>
                             <div class="gallery_item">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_solara_1.png" alt="slide">
+                                <a class="gallery_item_link" href="../pages/ford.html">
+                                    <img class="gallery_item-img" src="../img/layout/slider/ford.png" alt="ford">
+                                </a>
                             </div>
                             <div class="gallery_item">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_solara_2.png" alt="slide">
+                                <a class="gallery_item_link" href="../pages/solaris.html">
+                                    <img class="gallery_item-img" src="../img/layout/slider/slide_solara_1.png" alt="solaris">
+                                </a>
                             </div>
                             <div class="gallery_item">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_bus.png" alt="slide">
+                                <a class="gallery_item_link" href="../pages/solaris_two.html">
+                                    <img class="gallery_item-img" src="../img/layout/slider/solaris_green.png" alt="solaris">
+                                </a>
                             </div>
                             <div class="gallery_item">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_amarok2.png" alt="slide">
-                            </div>
-                            <div class="gallery_item">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_solara_1.png" alt="slide">
-                            </div>
-                            <div class="gallery_item">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_solara_2.png" alt="slide">
-                            </div>
-                            <div class="gallery_item">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_bus.png" alt="slide">
-                            </div>
-                            <div class="gallery_item">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_amarok2.png" alt="slide">
-                            </div>
-                            <div class="gallery_item">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_solara_1.png" alt="slide">
-                            </div>
-                            <div class="gallery_item">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_solara_2.png" alt="slide">
-                            </div>
-                            <div class="gallery_item">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_bus.png" alt="slide">
+                                <a class="gallery_item_link" href="../pages/bus.html">
+                                    <img class="gallery_item-img" src="../img/layout/slider/bus.png" alt="bus">
+                                </a>
                             </div>
                         </div>
                     </div>
