переход на aframe + vectary и мелкие правки

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
                         <a class="menu_navigation-link" href="#traffic_patrol">дорожный патруль ЦОДД</a>
                         <div class="menu_preview-block">
                             <div class="block-wrapper-video">
-                                <video class="menu_preview-video" src="./img/video/amarok.mp4" autoplay muted loop playsinline></video>
+                                <video class="menu_preview-video" src="./img/video/amarok.mp4" muted loop playsinline></video>
                             </div>
                         </div>
                     </li>
@@ -53,7 +53,7 @@
                         <a class="menu_navigation-link" href="#situation_centre">Мобильный ситуационный центр</a>
                         <div class="menu_preview-block">
                             <div class="block-wrapper-video">
-                                <video class="menu_preview-video" src="./img/video/bus.mp4" autoplay muted loop playsinline></video>
+                                <video class="menu_preview-video" src="./img/video/bus.mp4" muted loop playsinline></video>
                             </div>
                         </div>
                     </li>
@@ -76,7 +76,7 @@
                         <a class="menu_navigation-link" href="#help_desk">Служба помощи</a>
                         <div class="menu_preview-block">
                             <div class="block-wrapper-video">
-                                <video class="menu_preview-video" src="./img/video/ford.mp4" autoplay muted loop playsinline></video>
+                                <video class="menu_preview-video" src="./img/video/ford.mp4" muted loop playsinline></video>
                             </div>
                         </div>
                     </li>
@@ -182,7 +182,7 @@
                                 <a class="garage_model_card swiper-slide" href="./pages/amarok.html">
                                     <div class="slid_img">
                                         <img class="menu_preview-img" src="./img/layout/pages/main/slider/amarok.png" alt="Патрульный пикап">
-                                        <video class="menu_preview-video" src="./img/video/amarok.mp4" autoplay muted loop playsinline></video>
+                                        <video class="menu_preview-video" src="./img/video/amarok.mp4" muted loop playsinline></video>
                                     </div>
                                     <div class="slid_info">
                                         <div class="slid_info-desc">
@@ -204,7 +204,7 @@
                                 <a class="garage_model_card swiper-slide" href="./pages/ford.html">
                                     <div class="slid_img">
                                         <img class="menu_preview-img" src="./img/layout/pages/main/slider/ford.png" alt="Патрульный фургон">
-                                        <video class="menu_preview-video" src="./img/video/ford.mp4" autoplay muted loop playsinline></video>
+                                        <video class="menu_preview-video" src="./img/video/ford.mp4" muted loop playsinline></video>
                                     </div>
                                     <div class="slid_info">
                                         <div class="slid_info-desc">
@@ -226,7 +226,7 @@
                                 <a class="garage_model_card swiper-slide" href="./pages/solaris_two.html">
                                     <div class="slid_img">
                                         <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_green.png" alt="Патрульный седан">
-                                        <video class="menu_preview-video" src="./img/video/salaris.mp4" autoplay muted loop playsinline></video>
+                                        <video class="menu_preview-video" src="./img/video/salaris.mp4" muted loop playsinline></video>
                                     </div>
                                     <div class="slid_info">
                                         <div class="slid_info-desc">
@@ -253,7 +253,7 @@
                         <a class="garage_model_card NOSLIDE_1" href="./pages/amarok.html">
                             <div class="slid_img">
                                 <img class="menu_preview-img" src="./img/layout/pages/main/slider/amarok.png" alt="Патрульный пикап">
-                                <video class="menu_preview-video" src="./img/video/amarok.mp4" autoplay muted loop playsinline></video>
+                                <video class="menu_preview-video" src="./img/video/amarok.mp4" muted loop playsinline></video>
                             </div>
                             <div class="slid_info">
                                 <div class="slid_info-desc">
@@ -275,7 +275,7 @@
                         <a class="garage_model_card NOSLIDE_2" href="./pages/ford.html">
                             <div class="slid_img">
                                 <img class="menu_preview-img" src="./img/layout/pages/main/slider/ford.png" alt="Патрульный фургон">
-                                <video class="menu_preview-video" src="./img/video/ford.mp4" autoplay muted loop playsinline></video>
+                                <video class="menu_preview-video" src="./img/video/ford.mp4" muted loop playsinline></video>
                             </div>
                             <div class="slid_info">
                                 <div class="slid_info-desc">
@@ -297,7 +297,7 @@
                         <a class="garage_model_card NOSLIDE_3" href="./pages/solaris_two.html">
                             <div class="slid_img">
                                 <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_green.png" alt="Патрульный седан">
-                                <video class="menu_preview-video" src="./img/video/salaris.mp4" autoplay muted loop playsinline></video>
+                                <video class="menu_preview-video" src="./img/video/salaris.mp4" muted loop playsinline></video>
                             </div>
                             <div class="slid_info">
                                 <div class="slid_info-desc">
@@ -331,7 +331,7 @@
                         <a class="garage_model_card" href="./pages/amarok.html">
                             <div class="slid_img">
                                 <img class="menu_preview-img" src="./img/layout/pages/main/slider/amarok.png" alt="Патрульный пикап">
-                                <video class="menu_preview-video" src="./img/video/amarok.mp4" autoplay muted loop playsinline></video>
+                                <video class="menu_preview-video" src="./img/video/amarok.mp4" muted loop playsinline></video>
                             </div>
                             <div class="slid_info">
                                 <div class="slid_info-desc">
@@ -355,7 +355,7 @@
                         <a class="garage_model_card" href="./pages/ford.html">
                             <div class="slid_img">
                                 <img class="menu_preview-img" src="./img/layout/pages/main/slider/ford.png" alt="Патрульный фургон">
-                                <video class="menu_preview-video" src="./img/video/ford.mp4" autoplay muted loop playsinline></video>
+                                <video class="menu_preview-video" src="./img/video/ford.mp4" muted loop playsinline></video>
                             </div>
                             <div class="slid_info">
                                 <div class="slid_info-desc">
@@ -379,7 +379,7 @@
                         <a class="garage_model_card" href="./pages/solaris_two.html">
                             <div class="slid_img">
                                 <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_green.png" alt="Патрульный седан">
-                                <video class="menu_preview-video" src="./img/video/salaris.mp4" autoplay muted loop playsinline></video>
+                                <video class="menu_preview-video" src="./img/video/salaris.mp4" muted loop playsinline></video>
                             </div>
                             <div class="slid_info">
                                 <div class="slid_info-desc">
@@ -423,7 +423,7 @@
 <!--                        <div class="traffic_patrol_slider swiper-wrapper">-->
 <!--                            <a class="garage_model_card swiper-slide" href="./pages/amarok.html">-->
 <!--                                <div class="slid_img">-->
-<!--                                    <video class="menu_preview-video" src="./img/video/amarok.mp4" autoplay muted loop playsinline></video>-->
+<!--                                    <video class="menu_preview-video" src="./img/video/amarok.mp4" muted loop playsinline></video>-->
 <!--                                </div>-->
 <!--                                <div class="slid_info">-->
 <!--                                    <div class="slid_info-desc">-->
@@ -444,7 +444,7 @@
 <!--                            </a>-->
 <!--                            <a class="garage_model_card swiper-slide" href="./pages/amarok.html">-->
 <!--                                <div class="slid_img">-->
-<!--                                    <video class="menu_preview-video" src="./img/video/bus.mp4" autoplay muted loop playsinline></video>-->
+<!--                                    <video class="menu_preview-video" src="./img/video/bus.mp4" muted loop playsinline></video>-->
 <!--                                </div>-->
 <!--                                <div class="slid_info">-->
 <!--                                    <div class="slid_info-desc">-->
@@ -465,7 +465,7 @@
 <!--                            </a>-->
 <!--                            <a class="garage_model_card swiper-slide" href="./pages/amarok.html">-->
 <!--                                <div class="slid_img">-->
-<!--                                    <video class="menu_preview-video" src="./img/video/ford.mp4" autoplay muted loop playsinline></video>-->
+<!--                                    <video class="menu_preview-video" src="./img/video/ford.mp4" muted loop playsinline></video>-->
 <!--                                </div>-->
 <!--                                <div class="slid_info">-->
 <!--                                    <div class="slid_info-desc">-->
@@ -513,7 +513,7 @@
                         <a class="garage_model_card" href="./pages/bus.html">
                             <div class="slid_img">
                                 <img class="menu_preview-img" src="./img/layout/pages/main/slider/bus.png" alt="Ситуационный центр">
-                                <video class="menu_preview-video" src="./img/video/bus.mp4" autoplay muted loop playsinline></video>
+                                <video class="menu_preview-video" src="./img/video/bus.mp4" muted loop playsinline></video>
                             </div>
                             <div class="slid_info">
                                 <div class="slid_info-desc">
@@ -841,7 +841,7 @@
                         <a class="garage_model_card" href="./pages/ford.html">
                             <div class="slid_img">
                                 <img class="menu_preview-img" src="./img/layout/pages/main/slider/ford.png" alt="Служба помощи">
-                                <video class="menu_preview-video" src="./img/video/ford.mp4" autoplay muted loop playsinline></video>
+                                <video class="menu_preview-video" src="./img/video/ford.mp4" muted loop playsinline></video>
                             </div>
                             <div class="slid_info">
                                 <div class="slid_info-desc">
@@ -865,7 +865,7 @@
                         <a class="garage_model_card" href="./pages/bus.html">
                             <div class="slid_img">
                                 <img class="menu_preview-img" src="./img/layout/pages/main/slider/bus.png" alt="Ситуационный центр">
-                                <video class="menu_preview-video" src="./img/video/bus.mp4" autoplay muted loop playsinline></video>
+                                <video class="menu_preview-video" src="./img/video/bus.mp4" muted loop playsinline></video>
                             </div>
                             <div class="slid_info">
                                 <div class="slid_info-desc">
@@ -891,7 +891,7 @@
                                 <a class="garage_model_card swiper-slide" href="./pages/ford.html">
                                     <div class="slid_img">
                                         <img class="menu_preview-img" src="./img/layout/pages/main/slider/ford.png" alt="Служба помощи">
-                                        <video class="menu_preview-video" src="./img/video/ford.mp4" autoplay muted loop playsinline></video>
+                                        <video class="menu_preview-video" src="./img/video/ford.mp4" muted loop playsinline></video>
                                     </div>
                                     <div class="slid_info">
                                         <div class="slid_info-desc">
@@ -913,7 +913,7 @@
                                 <a class="garage_model_card swiper-slide" href="./pages/amarok.html">
                                     <div class="slid_img">
                                         <img class="menu_preview-img" src="./img/layout/pages/main/slider/amarok.png" alt="Патрульный пикап">
-                                        <video class="menu_preview-video" src="./img/video/amarok.mp4" autoplay muted loop playsinline></video>
+                                        <video class="menu_preview-video" src="./img/video/amarok.mp4" muted loop playsinline></video>
                                     </div>
                                     <div class="slid_info">
                                         <div class="slid_info-desc">
@@ -935,7 +935,7 @@
                                 <a class="garage_model_card swiper-slide" href="./pages/amarok.html">
                                     <div class="slid_img">
                                         <img class="menu_preview-img" src="./img/layout/pages/main/slider/amarok.png" alt="Патрульный пикап">
-                                        <video class="menu_preview-video" src="./img/video/amarok.mp4" autoplay muted loop playsinline></video>
+                                        <video class="menu_preview-video" src="./img/video/amarok.mp4" muted loop playsinline></video>
                                     </div>
                                     <div class="slid_info">
                                         <div class="slid_info-desc">
