--- a/src/pages/amarok.html
+++ b/src/pages/amarok.html
@@ -229,6 +229,8 @@
     </div>
 </main>
 
+<iframe src="https://app.vectary.com/p/05xqKl2g22Pw4ClSHgLBWU" width="100%" height="100%"></iframe>
+
 <section class="auto_park">
     <div class="container">
         <div class="auto_park_wrapper">
@@ -279,7 +281,7 @@
     </div>
 </section>
 
-<div id="Canvas_wrapper"></div>
+<!--<div id="Canvas_wrapper"></div>-->
 
 <a-scene>
     <a-assets>
