--- a/src/pages/amarok.html
+++ b/src/pages/amarok.html
@@ -99,7 +99,10 @@
 <!--            </video>-->
         </div>
         <span id="progress-label">0%</span>
-        <progress id="progress-bar" value="0" max="100"></progress>
+<!--        <progress id="progress-bar" value="0" max="100"></progress>-->
+        <div id="hellopreloader_barWrapper">
+            <progress id="progress-bar" value="0" max="100"></progress>
+        </div>
         <label for="progress-bar">Загрузка...</label>
     </div>
 </div>
@@ -253,12 +256,12 @@
                         </div>
                         <div class="gallery_item">
                             <a class="gallery_item_link" href="../pages/solaris.html">
-                                <img class="gallery_item-img" src="../img/layout/slider/slide_solara_1.png" alt="solaris">
+                                <img class="gallery_item-img" src="../img/layout/slider/solaris_green.png" alt="solaris">
                             </a>
                         </div>
                         <div class="gallery_item">
                             <a class="gallery_item_link" href="../pages/solaris_two.html">
-                                <img class="gallery_item-img" src="../img/layout/slider/solaris_green.png" alt="solaris">
+                                <img class="gallery_item-img" src="../img/layout/slider/solaris_gray.png" alt="solaris">
                             </a>
                         </div>
                         <div class="gallery_item">
@@ -501,6 +504,7 @@
     <a-sky id="skybox" src="#room1" rotation="0 0 0" phi-start="175"></a-sky>
 </a-scene>
 
+<script src="../js/loader.js"></script>
 <script>
     setTimeout(() => {
         let currentInfoPanel = null;
